[workspace]
members  = ['crates/*']
resolver = "2"

[workspace.package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
edition      = "2021"
homepage     = "https://ret.sh.cn/"
publish      = false
repository   = "https://github.com/ret2shell/ret2shell"
rust-version = "1.83.0"
version      = "3.5.4"

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
panic         = "abort"
strip         = true

[workspace.dependencies]
aho-corasick       = "1.1"
anyhow             = "1.0"
argon2             = "0.5"
async-nats         = "0.38"
async-trait        = "0.1"
base64             = "0.22"
bcrypt             = "0.16"
biosvg             = "0.1"
build-target       = "0.4"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4.5", features = ["derive"] }
colored            = "3.0"
deunicode          = "1.6"
futures            = "0.3"
futures-io         = "0.3"
git-version        = "0.3"
heck               = "0.5"
hex                = "0.4"
hyper-util         = "0.1"
image              = "0.25"
infer              = "0.16"
jsonwebtoken       = { version = "9.3", default-features = false }
k8s-openapi        = { version = "0.24", features = ["latest"] }
mime               = "0.3"
nanoid             = "0.4"
num-derive         = "0.4"
num-traits         = "0.2"
once_cell          = "1.20"
rand               = "0.8"
regex              = "1.11"
ret2script         = { version = "1.7", default-features = false }
ring               = "0.17"
roxmltree          = "0.20"
rune               = { version = "0.13", features = ["tokio"] }
rune-modules       = { version = "0.13", features = ["full"] }
rustc_version      = "0.4"
rustls             = { version = "0.23", features = ["ring"] }
sea-orm            = "1.1"
sea-orm-migration  = "1.1"
sea-query          = "0.32"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_repr         = "0.1"
systemstat         = { version = "0.2", features = ["serde"] }
tempdir            = "0.3"
thiserror          = "2.0"
tokio              = { version = "1.43", features = ["full"] }
tokio-stream       = "0.1"
tokio-util         = { version = "0.7", features = ["codec"] }
toml               = "0.8"
tower_governor     = "0.6"
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-core       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

r2s-auditor  = { version = "3", path = "crates/auditor" }
r2s-bucket   = { version = "3", path = "crates/bucket" }
r2s-cache    = { version = "3", path = "crates/cache" }
r2s-captcha  = { version = "3", path = "crates/captcha" }
r2s-checker  = { version = "3", path = "crates/checker" }
r2s-cluster  = { version = "3", path = "crates/cluster" }
r2s-config   = { version = "3", path = "crates/config" }
r2s-database = { version = "3", path = "crates/database" }
r2s-email    = { version = "3", path = "crates/email" }
r2s-event    = { version = "3", path = "crates/event" }
r2s-license  = { version = "3", path = "crates/license" }
r2s-media    = { version = "3", path = "crates/media" }
r2s-migrator = { version = "3", path = "crates/migrator" }
r2s-oauth    = { version = "3", path = "crates/oauth" }
r2s-queue    = { version = "3", path = "crates/queue" }

[workspace.dependencies.axum]
features = ["ws", "http2", "tower-log", "tracing", "multipart", "macros"]
version  = "0.8"

[workspace.dependencies.tower]
features = ["limit"]
version  = "0.5"

[workspace.dependencies.tower-http]
features = ["cors", "fs", "trace"]
version  = "0.6"

[workspace.dependencies.axum-extra]
features = [
  "typed-header",
  "query",
  "multipart",
  "typed-routing",
  "async-read-body",
]
version = "0.10"

[workspace.dependencies.reqwest]
default-features = false
features         = ["json", "rustls-tls", "http2", "charset"]
version          = "0.12"

[workspace.dependencies.lettre]
default-features = false
features = [
  "smtp-transport",
  "tokio1",
  "rustls-tls",
  "rustls-native-certs",
  "tokio1-rustls-tls",
  "pool",
  "hostname",
  "tracing",
  "builder",
]
version = "0.11"

[workspace.dependencies.fred]
features = [
  "enable-rustls",
  "partial-tracing",
  "monitor",
  "sentinel-client",
  "serde-json",
  "mocks",
  "dns",
]
version = "10.0"

[workspace.dependencies.kube]
features = ["config", "client", "rustls-tls", "runtime", "derive", "ws"]
version  = "0.98"

[workspace.dependencies.wsrx]
default-features = false
features         = ["server"]
version          = "0.3"
