[workspace]
members  = ['crates/*']
resolver = "2"

[workspace.package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
edition      = "2024"
homepage     = "https://ret.sh.cn/"
publish      = false
repository   = "https://github.com/ret2shell/ret2shell"
rust-version = "1.90.0"
version      = "3.9.0"

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
panic         = "abort"
strip         = true

[workspace.dependencies]
aho-corasick       = "1.1"
anyhow             = "1.0"
argon2             = "0.5"
async-nats         = "0.45"
async-trait        = "0.1"
base64             = "0.22"
bcrypt             = "0.18"
biosvg             = "0.1"
build-target       = "0.8"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4.5", features = ["derive"] }
deunicode          = "1.6"
futures            = "0.3"
futures-io         = "0.3"
git-version        = "0.3"
heck               = "0.5"
hex                = "0.4"
hyper-util         = "0.1"
image              = "0.25"
infer              = "0.19"
k8s-openapi        = { version = "0.27", features = ["latest"] }
mime               = "0.3"
nanoid             = "0.4"
num-derive         = "0.4"
num-traits         = "0.2"
once_cell          = "1.21"
owo-colors         = "4.2"
rand               = "0.9"
regex              = "1.12"
ret2script         = { version = "1.8", default-features = false }
ring               = "0.17"
roxmltree          = "0.21"
rune               = { version = "0.14", features = ["tokio", "cli"] }
rune-modules       = { version = "0.14", features = ["full"] }
rustc_version      = "0.4"
rustls             = { version = "0.23", features = ["ring"] }
sea-orm            = "1.1"
sea-orm-migration  = "1.1"
sea-query          = "0.32"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
serde_repr         = "0.1"
systemstat         = { version = "0.2", features = ["serde"] }
thiserror          = "2.0"
tokio              = { version = "1.48", features = ["full"] }
tokio-stream       = "0.1"
tokio-util         = { version = "0.7", features = ["codec"] }
toml               = "0.9"
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-core       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding        = "2.1"

r2s-auditor  = { version = "3", path = "crates/auditor" }
r2s-bucket   = { version = "3", path = "crates/bucket" }
r2s-cache    = { version = "3", path = "crates/cache" }
r2s-captcha  = { version = "3", path = "crates/captcha" }
r2s-checker  = { version = "3", path = "crates/checker" }
r2s-cluster  = { version = "3", path = "crates/cluster" }
r2s-config   = { version = "3", path = "crates/config" }
r2s-database = { version = "3", path = "crates/database" }
r2s-email    = { version = "3", path = "crates/email" }
r2s-engine   = { version = "3", path = "crates/engine" }
r2s-event    = { version = "3", path = "crates/event" }
r2s-license  = { version = "3", path = "crates/license" }
r2s-media    = { version = "3", path = "crates/media" }
r2s-migrator = { version = "3", path = "crates/migrator" }
r2s-oauth    = { version = "3", path = "crates/oauth" }
r2s-queue    = { version = "3", path = "crates/queue" }

[workspace.dependencies.axum]
features = ["ws", "http2", "tower-log", "tracing", "multipart", "macros"]
version  = "0.8"

[workspace.dependencies.jsonwebtoken]
default-features = false
features         = ["aws_lc_rs"]
version          = "10.2"

[workspace.dependencies.tower_governor]
default-features = false
features         = ["axum"]
version          = "0.8"

[workspace.dependencies.tower]
features = ["limit"]
version  = "0.5"

[workspace.dependencies.tower-http]
features = ["cors", "fs", "trace", "normalize-path", "request-id", "util"]
version  = "0.6"

[workspace.dependencies.axum-extra]
features = [
  "typed-header",
  "query",
  "multipart",
  "typed-routing",
  "async-read-body",
]
version = "0.12"

[workspace.dependencies.reqwest]
features = ["json", "http2", "charset"]
version  = "0.13"

[workspace.dependencies.lettre]
default-features = false
features = [
  "smtp-transport",
  "tokio1",
  "rustls-tls",
  "rustls-native-certs",
  "tokio1-rustls-tls",
  "pool",
  "hostname",
  "tracing",
  "builder",
]
version = "0.11"

[workspace.dependencies.fred]
features = [
  "enable-rustls",
  "partial-tracing",
  "monitor",
  "sentinel-client",
  "serde-json",
  "mocks",
  "dns",
]
version = "10.1"

[workspace.dependencies.kube]
features = ["config", "client", "rustls-tls", "runtime", "derive", "ws"]
version  = "3.0"

[workspace.dependencies.wsrx]
default-features = false
features         = ["server", "log"]
version          = "0.5"
