[package]
name = "ret2shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
description = "A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Runtime
tokio = { version = "1.32", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"
# Web Framework
axum = { version = "0.6", features = [
    "headers",
    "ws",
    "http2",
    "multipart",
    "macros",
] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs", "trace"] }
# Auth
jsonwebtoken = "8.3"
bcrypt = "0.15"
argon2 = "0.5"
# ORM
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "0.12"
sea-query = "0.30"
# Utilities
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
once_cell = "1.18"
anyhow = "1.0"
toml = "0.7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "cookies",
    "gzip",
    "json",
], default-features = false }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
mime_guess = "2.0"
mime = "0.3"
image = { version = "0.24", features = ["webp-encoder"] }
aho-corasick = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
base64 = "0.21"
regex = "1.9"
nanoid = "0.4"
deunicode = "1.3"
sanitizer = "0.1"
roxmltree = "0.18"
# Logger
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Cache
redis = { version = "0.23", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster-async",
    "connection-manager",
] }
bb8 = "0.8"
bb8-redis = "0.13"
# Email
lettre = { version = "0.10", features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
    "builder",
], default-features = false }
# Message Queue
async-nats = "0.31"
# Captcha
captcha-rs = "0.2"