[package]
name = "ret2shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
description = "A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Runtime
tokio = { version = "1.33", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
async-recursion = "1.0"
# Web Framework
axum = { version = "0.6", features = [
    "headers",
    "ws",
    "http2",
    "multipart",
    "macros",
] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs", "trace"] }
# Auth
jsonwebtoken = { version = "9.0", default-features = false }
bcrypt = "0.15"
# ORM
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "0.12"
sea-query = "0.30"
# Utilities
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "cookies",
    "gzip",
    "json",
], default-features = false }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
mime_guess = "2.0"
mime = "0.3"
image = { version = "0.24", features = ["webp-encoder"] }
aho-corasick = "1.1"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
base64 = "0.21"
regex = "1.10"
nanoid = "0.4"
deunicode = "1.4"
sanitizer = "0.1"
roxmltree = "0.18"
# Logger
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Cache
redis = { version = "0.23", features = [
    "tokio-comp",
    "tokio-rustls-comp",
    "cluster-async",
    "connection-manager",
] }
bb8 = "0.8"
bb8-redis = "0.13"
# Email
lettre = { version = "0.11", features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
    "builder",
], default-features = false }
# Message Queue
async-nats = "0.32"
# Captcha
biosvg = "0.1"
# Version Control and Storage
wsvc = "0.1"
# WebSocket Reflector
wsrx = "0.1"
# Kubernetes
kube = { version = "0.86", features = [
    "client",
    "rustls-tls",
    "runtime",
    "derive",
] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
