[package]
name = "ret2shell"
version = "0.5.6"
edition = "2021"
rust-version = "1.75.0"
description = "A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Runtime
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
# Web Framework
axum = { version = "0.7", features = [
  "ws",
  "http2",
  "multipart",
  "macros",
  "tower-log",
  "tracing",
] }
axum-extra = { version = "0.9", features = [
  "typed-header",
  "query",
  "multipart",
  "typed-routing",
  "async-read-body",
] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
# Auth
jsonwebtoken = { version = "9.2", default-features = false }
bcrypt = "0.15"
argon2 = "0.5"
# ORM
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = "0.12"
sea-query = "0.30"
# Utilities
ring = "0.17"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
hex = "0.4"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
mime_guess = "2.0"
mime = "0.3"
image = { version = "0.24", features = ["webp-encoder"] }
aho-corasick = "1.1"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
base64 = "0.21"
regex = "1.10"
nanoid = "0.4"
deunicode = "1.4"
sanitizer = "0.1"
roxmltree = "0.19"
# Logger
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Cache
redis = { version = "0.24", features = [
  "tokio-comp",
  "tokio-rustls-comp",
  "cluster-async",
  "connection-manager",
] }
bb8 = "0.8"
bb8-redis = "0.14"
# Email
lettre = { version = "0.11", features = [
  "smtp-transport",
  "tokio1",
  "rustls-tls",
  "rustls-native-certs",
  "tokio1-rustls-tls",
  "pool",
  "hostname",
  "tracing",
  "builder",
], default-features = false }
# Message Queue
async-nats = "0.33"
# Captcha
biosvg = "0.1"
# WebSocket Reflector
wsrx = { version = "0.1", features = ["web"] }
# Kubernetes
kube = { version = "0.88", features = [
  "config",
  "client",
  "rustls-tls",
  "runtime",
  "derive",
] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
# System stat
systemstat = { version = "0.2", features = ["serde"] }
rustc_version = "0.4"
git-version = "0.3"
