[package]
name = "ret2shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Runtime
tokio = { version = "1.28", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
bytes = "1.4"
futures = "0.3"
async-trait = "0.1"
# Web Framework
axum = { version = "0.6", features = [
    "headers",
    "ws",
    "http2",
    "multipart",
    "macros",
] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs", "trace"] }
# Auth
jsonwebtoken = "8.3"
bcrypt = "0.14"
argon2 = "0.5.0"
# ORM
sea-orm = { version = "0.11", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sqlx-core = "0.6"
sea-orm-migration = "0.11"
sea-query = "0.28"
# Utilities
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
once_cell = "1.17"
anyhow = "1.0"
toml = "0.7"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = [
    "rustls-tls",
    "cookies",
    "gzip",
    "json",
], default-features = false }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
mime_guess = "2.0"
mime = "0.3"
image = { version = "0.24", features = ["webp-encoder"] }
aho-corasick = "1.0"
clap = { version = "4.2", features = ["derive"] }
colored = "2.0"
base64 = "0.21"
regex = "1.8"
nanoid = "0.4"
deunicode = "1.3"
sanitizer = "0.1"
roxmltree = "0.18"
# Logger
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Cache
fred = { version = "6.1", features = [
    "enable-rustls",
    "metrics",
    "partial-tracing",
    "reconnect-on-auth-error",
    "monitor",
    "custom-reconnect-errors",
    "serde-json",
    "dns",
    "subscriber-client",
], default-features = false }
# Email
lettre = { version = "0.10", features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
    "builder",
], default-features = false } # Email client
# Git
gix = "0.47"
gix-worktree = "0.20"
gix-index = "0.19"
gix-traverse = "0.28"
gix-object = "0.31"
gix-hash = "0.11"
