[package]
name = "r2s-auditor"
version = "3.4.0"
edition = "2021"
rust-version = "1.80.0"
description = "Auditor for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
r2s-config = { workspace = true }
aho-corasick = { workspace = true }

[lib]
path = "src/lib.rs"
