[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Auditor for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-auditor"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[dependencies]
aho-corasick = { workspace = true }
r2s-config   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[lib]
path = "src/lib.rs"
