[package]
name = "r2s-automate"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.2"
description = "Automate event publisher for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"

[lib]
path = "src/lib.rs"
