[package]
name = "r2s-bucket"
version = "3.2.0"
edition = "2021"
rust-version = "1.80.0"
description = "Bucket storage for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
toml = "0.8"
deunicode = "1.6"
ring = "0.17"
heck = "0.5"
regex = "1.11"
r2s-config = { version = "3", path = "../config" }

[lib]
path = "src/lib.rs"
