[package]
name = "r2s-bucket"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Bucket storage for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
toml = { workspace = true }
ring = { workspace = true }
heck = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
deunicode = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
