[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Bucket storage for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-bucket"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[dependencies]
chrono     = { workspace = true }
deunicode  = { workspace = true }
heck       = { workspace = true }
regex      = { workspace = true }
ring       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
