[package]
name = "r2s-cache"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Cache database for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
fred = { version = "9.4", features = [
  "enable-rustls",
  "partial-tracing",
  "monitor",
  "sentinel-client",
  "serde-json",
  "mocks",
  "dns",
] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"

r2s-config = { version = "3", path = "../config" }

[lib]
path = "src/lib.rs"
