[package]
name = "r2s-cache"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Cache database for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
fred = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
