[package]
name = "r2s-captcha"
version = "1.0.0"
edition = "2021"
rust-version = "1.77.0"
description = "Captcha generator for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
nanoid = "0.4"
ring = "0.17"
thiserror = "1.0"
hex = "0.4"
biosvg = "0.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
serde_repr = "0.1"
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }

r2s-config = { version = "1.0.0", path = "../config" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-captcha"
path = "src/main.rs"
