[package]
name = "r2s-captcha"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Captcha generator for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
hex = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
nanoid = { workspace = true }
biosvg = { workspace = true }
thiserror = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-captcha"
path = "src/main.rs"
