[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Captcha generator for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-captcha"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[dependencies]
async-trait = { workspace = true }
biosvg      = { workspace = true }
hex         = { workspace = true }
nanoid      = { workspace = true }
ring        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-captcha"
path = "src/main.rs"
