[package]
name = "r2s-checker"
version = "3.4.0"
edition = "2021"
rust-version = "1.80.0"
description = "Challenge checkers for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
rune = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
ret2script = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
rune-modules = { workspace = true }

r2s-config = { workspace = true }
r2s-database = { workspace = true }
r2s-cluster = { workspace = true }
r2s-bucket = { workspace = true }
