[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Challenge checkers for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-checker"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.2"

[dependencies]
async-nats   = { workspace = true }
async-trait  = { workspace = true }
chrono       = { workspace = true }
once_cell    = { workspace = true }
ret2script   = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

r2s-bucket   = { workspace = true }
r2s-cluster  = { workspace = true }
r2s-config   = { workspace = true }
r2s-database = { workspace = true }
