[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Challenge checkers for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-checker"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[dependencies]
chrono       = { workspace = true }
ret2script   = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

r2s-bucket   = { workspace = true }
r2s-database = { workspace = true }
