[package]
name = "r2s-cluster"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Cluster manager for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
kube = { version = "0.96", features = [
  "config",
  "client",
  "rustls-tls",
  "runtime",
  "derive",
  "ws",
] }
axum = { version = "0.7", features = ["ws", "http2", "tower-log", "tracing"] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "http2",
  "charset",
], default-features = false }
k8s-openapi = { version = "0.23", features = ["v1_28"] }
tracing = "0.1"
thiserror = "2.0"
tempdir = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
num-derive = "0.4"
num-traits = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures-io = "0.3"
nanoid = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
wsrx = { version = "0.2", features = ["server"] }
tokio = { version = "1.41", features = ["full"] }

r2s-config = { version = "3", path = "../config" }

[lib]
path = "src/lib.rs"
