[package]
name = "r2s-cluster"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Cluster manager for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
kube = { workspace = true }
axum = { workspace = true }
wsrx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
nanoid = { workspace = true }
chrono = { workspace = true }
tempdir = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
k8s-openapi = { workspace = true }
futures-io = { workspace = true }
tokio-util = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
