[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Cluster manager for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-cluster"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.2"

[dependencies]
axum         = { workspace = true }
chrono       = { workspace = true }
deunicode    = { workspace = true }
futures-io   = { workspace = true }
k8s-openapi  = { workspace = true }
kube         = { workspace = true }
nanoid       = { workspace = true }
num-derive   = { workspace = true }
num-traits   = { workspace = true }
regex        = { workspace = true }
reqwest      = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_repr   = { workspace = true }
tempdir      = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
wsrx         = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
