[package]
name = "r2s-config"
version = "1.4.2"
edition = "2021"
rust-version = "1.78.0"
description = "Config provider for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
sea-orm = { version = "0.12", default-features = false, features = [
  "macros",
  "with-json",
] }

[lib]
path = "src/lib.rs"
