[package]
name = "r2s-config"
version = "3.3.1"
edition = "2021"
rust-version = "1.80.0"
description = "Config provider for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
sea-orm = { version = "1.1", default-features = false, features = [
  "macros",
  "with-json",
] }

[lib]
path = "src/lib.rs"
