[package]
authors      = ["Reverier-Xu <reverier.xu@woooo.tech>"]
description  = "Config provider for Ret2Shell - A feature-riches CTF challenge platform."
edition      = "2021"
homepage     = "https://ret.sh.cn/"
keywords     = ["ctf", "challenge", "platform", "security", "education"]
name         = "r2s-config"
publish      = false
resolver     = "2"
rust-version = "1.80.0"
version      = "3.4.3"

[package.metadata.cargo-machete]
ignored = ["serde_json"] # required by sea-orm `FromJsonResult`

[dependencies]
sea-orm    = { workspace = true, features = ["macros", "with-json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }

[lib]
path = "src/lib.rs"
